tests/error/comptime/check_inplace_construct3.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);

		__builtin_inplace_construct(p + 1, 0);
	});
}
